# tft-comp-decider

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/builds/: crystal_gamba.yaml  double_trouble_fan_service.yaml  drunkmaster_darius.yaml  heavy_malzahar.yaml  jujutsu_kaisa_mentor.yaml  jujutsu_kaisa_ok.yaml  mentor_mech.yaml  mentor_senna_yasuo.yaml  set-15-95-varus.yaml  set-15-bastion-yasuo.yaml  set-15-crewboy-bebop.yaml  set-15-crystal-gamba.yaml  set-15-double-trouble-fan-service.yaml  set-15-drift-duo-lucian.yaml  set-15-duelist-ashe-ok.yaml  set-15-executioner-katarina.yaml  set-15-fusion-ha.yaml  set-15-give-em-the-chair-dr-mundo.yaml  set-15-heavy-malzahar.yaml  set-15-jhin-mundo.yaml  set-15-juggernaut-ashe.yaml  set-15-jujutsu-kaisa-mentor.yaml  set-15-jujutsu-kaisa-ok.yaml  set-15-karma-sorcs.yaml  set-15-kayle-reroll.yaml  set-15-knuckledusters-vi.yaml  set-15-kogmaw-trainer-heavy.yaml  set-15-malzahar-wraith-flex.yaml  set-15-mentor-mecha-fast-9.yaml  set-15-mentor-senna-yasuo.yaml  set-15-mighty-morphin-mecha.yaml  set-15-monster-trainer-kogmaw.yaml  set-15-nine-thousand-volts-kennen.yaml  set-15-perfect-form-zac.yaml  set-15-protector-xayah.yaml  set-15-schoolyard-justice.yaml  set-15-shadow-cat.yaml  set-15-shining-bright-lux.yaml  set-15-silver-jayce.yaml  set-15-sniper-bastion.yaml  (+18 more)
data/catalog/: 15.4_en.yaml
scripts/: update_builds.py
src/tft_decider/: __init__.py
src/tft_decider/core/: analytics.py  exceptions.py  models.py  notes.py  scoring.py  solver.py  types.py
src/tft_decider/data/: catalog.py  data_loader.py
src/tft_decider/infra/: logging.py
src/tft_decider/ui/: app.py  texts.py  widgets.py
tests/: conftest.py  test_scoring.py
